--- a/pages/admin.html
+++ b/pages/admin.html
@@ -19,177 +19,16 @@
 							<div class="fs-2 fw-bold me-9" href="#">Admin</div>
 
 							<!-- add new admin Button trigger modal -->
-							<button
-								type="button"
-								class="btn d-flex align-items-center fs-4 fw-bold p-0 pe-1 add-new-admin"
-								data-bs-toggle="modal"
-								data-bs-target="#addNewAdmin">
-								<span class="material-symbols-outlined text-primary me-2">
-									add </span
-								>Add New Admin
-							</button>
+							<%- include("./layout/newAdminButton") -%>
 
 							<!-- add new admin Modal -->
-							<div
-								class="modal fade addNewAdmin"
-								id="addNewAdmin"
-								tabindex="-1"
-								aria-labelledby="addNewAdmin"
-								aria-hidden="true">
-								<div class="modal-dialog modal-dialog-scrollable">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h1 class="modal-title h2 fw-bold" id="addNewAdmin">
-												New Admin
-											</h1>
-											<button
-												type="button"
-												class="btn-close"
-												data-bs-dismiss="modal"
-												aria-label="Close"></button>
-										</div>
-										<div class="modal-body pt-0 px-8 pb-8">
-											<h2 class="h3 fw-bold mb-4 mt-2">Account</h2>
-											<form>
-												<div class="mb-4">
-													<label for="adminName" class="form-label fs-5 mb-1"
-														>Name</label
-													>
-													<input
-														type="name"
-														class="form-control"
-														id="adminName" />
-												</div>
-												<div class="mb-7">
-													<label for="adminEmail" class="form-label fs-5 mb-1"
-														>Email</label
-													>
-													<input
-														type="email"
-														class="form-control"
-														id="adminEmail"
-														aria-describedby="emailHelp" />
-												</div>
-											</form>
+							<%- include("./layout/newAdminModal") -%>
 
-											<hr class="text-gray-500 mb-7" />
-											<h2 class="h3 fw-bold mb-5">Verification</h2>
-											<h3 class="h4 fw-bold d-flex align-items-center mb-5">
-												<span
-													class="material-symbols-outlined text-secondary me-2">
-													warning </span
-												>Unverified
-											</h3>
-											<div class="d-grid mb-7">
-												<button
-													type="submit"
-													class="btn btn-outline-gray-400 btn-sendMail">
-													Send Verification Mail
-												</button>
-											</div>
+							<!-- new Admin 成功提示訊息 -->
+							<%- include("./layout/newAdminSuccess") -%>
 
-											<hr class="mb-7" />
-											<h2 class="h3 fw-bold mb-4">Access Level</h2>
-											<select
-												class="form-select mb-7"
-												aria-label="Default select">
-												<option selected>-Choose access level-</option>
-												<option value="1">Admin</option>
-												<option value="2">Moderator</option>
-											</select>
-
-											<hr class="mb-7" />
-											<h2 class="h3 fw-bold mb-4">Custom Access</h2>
-											<div class="form-check">
-												<input
-													class="form-check-input"
-													type="checkbox"
-													value=""
-													id="lectureAccess" />
-												<label class="form-check-label" for="lectureAccess">
-													Lecture
-												</label>
-											</div>
-											<div class="form-check">
-												<input
-													class="form-check-input"
-													type="checkbox"
-													value=""
-													id="couponAccess" />
-												<label class="form-check-label" for="couponAccess">
-													Coupon
-												</label>
-											</div>
-											<div class="form-check">
-												<input
-													class="form-check-input"
-													type="checkbox"
-													value=""
-													id="messageAccess" />
-												<label class="form-check-label" for="messageAccess">
-													Message
-												</label>
-											</div>
-											<div class="form-check">
-												<input
-													class="form-check-input"
-													type="checkbox"
-													value=""
-													id="settingAccess" />
-												<label class="form-check-label" for="settingAccess">
-													Setting
-												</label>
-											</div>
-											<div class="form-check">
-												<input
-													class="form-check-input"
-													type="checkbox"
-													value=""
-													id="taskMenuAccess" />
-												<label class="form-check-label" for="taskMenuAccess">
-													Task Menu
-												</label>
-											</div>
-										</div>
-										<div class="modal-footer py-3 px-8">
-											<button
-												type="button"
-												class="btn btn-outline-primary py-1 px-8"
-												data-bs-dismiss="modal">
-												Cancel
-											</button>
-											<button
-												type="button"
-												class="btn btn-primary py-1 px-8"
-												　id="saveChangesButton"
-												data-bs-toggle="modal"
-												data-bs-target="#successAlert">
-												Add
-											</button>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- 成功提示框 -->
-							<div
-								class="modal fade"
-								id="successAlert"
-								tabindex="-1"
-								aria-labelledby="successAlertLabel"
-								aria-hidden="true">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div
-											class="modal-body text-primary fw-bold d-flex align-items-center">
-											<span class="material-symbols-outlined me-2">
-												check_circle
-											</span>
-											Successfully Added !!
-										</div>
-									</div>
-								</div>
-							</div>
+							<!-- edit Admin 成功提示訊息 -->
+							<%- include("./layout/editAdminSuccess") -%>
 						</div>
 						<div class="btns d-flex">
 							<a class="text-gray-900" href="###">
@@ -233,7 +72,11 @@
 									</span>
 								</button>
 								<button class="btn p-0">
-									<span class="material-symbols-outlined align-middle">
+									<span
+										type="button"
+										class="material-symbols-outlined align-middle"
+										data-bs-toggle="modal"
+										data-bs-target="#editAdminModal">
 										edit
 									</span>
 								</button>
@@ -506,7 +349,11 @@
 									data-bs-dismiss="modal">
 									Deactivate
 								</button>
-								<button type="button" class="btn btn-primary m-0 py-1 px-8">
+								<button
+									type="button"
+									class="btn btn-primary m-0 py-1 px-8"
+									data-bs-toggle="modal"
+									data-bs-target="#editAdminModal">
 									Edit
 								</button>
 							</div>
@@ -514,6 +361,7 @@
 					</div>
 				</div>
 
+				<%- include("./layout/editAdminModal") -%>
 				<nav aria-label="Page navigation example">
 					<ul class="pagination justify-content-end">
 						<li class="page-item disabled">
