--- a/admin.html
+++ b/admin.html
@@ -609,7 +609,8 @@
 							type="name"
 							class="form-control bg-gray-100 border-0 p-3"
 							id="adminName"
-							value="Emir Wicks" />
+							value="Emir Wicks"
+							readonly />
 					</div>
 					<div class="mb-7">
 						<label for="adminEmail" class="form-label fs-5 mb-1">Email</label>
@@ -618,7 +619,8 @@
 							class="form-control bg-gray-100 border-0 p-3"
 							id="adminEmail"
 							value="emir.wicks@mail.com"
-							aria-describedby="emailHelp" />
+							aria-describedby="emailHelp"
+							readonly />
 					</div>
 				</form>
 
